--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         }
 
         .container {
+            width: 100%;
             max-width: 600px;
             padding: 20px;
         }
@@ -43,27 +44,36 @@
 
         .ca-container {
             margin: 20px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
         }
 
         .ca-box {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             background: #f4f4f4;
             padding: 10px;
             border-radius: 5px;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            word-wrap: break-word;
         }
 
-        .ca-box button {
+        .copy-btn {
             background: #ffb6c1; /* Light Pink */
             color: white;
             border: none;
-            padding: 5px 10px;
+            padding: 8px 15px;
             cursor: pointer;
             transition: transform 0.2s ease-in-out, background 0.3s ease;
+            margin-top: 10px;
+            border-radius: 5px;
+            width: 100%; /* Full width on mobile */
+            max-width: 200px;
         }
 
-        .ca-box button:active {
+        .copy-btn:active {
             transform: scale(0.9);
             background: #ff80a0; /* Slightly darker pink */
         }
@@ -73,6 +83,7 @@
             flex-direction: column;
             gap: 10px;
             margin-top: 20px;
+            width: 100%;
         }
 
         .btn {
@@ -92,14 +103,14 @@
 
         /* Chart Styling */
         .chart-container {
-            width: 90%;
+            width: 100%;
             max-width: 900px;
             margin-top: 30px;
         }
 
         .chart-container iframe {
             width: 100%;
-            height: 700px; /* Bigger Chart */
+            height: 500px; /* Adjusted for better mobile experience */
             border-radius: 10px;
         }
 
@@ -121,6 +132,44 @@
             width: 100%;
             border-radius: 10px;
         }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            .chart-container iframe {
+                height: 400px; /* Slightly smaller for mobile */
+            }
+
+            .btn {
+                padding: 10px;
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            .ca-box {
+                font-size: 12px;
+            }
+
+            .copy-btn {
+                padding: 6px 12px;
+            }
+
+            .chart-container iframe {
+                height: 350px; /* Smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
@@ -136,8 +185,8 @@
             <p>Contract Address:</p>
             <div class="ca-box">
                 <span id="ca-text">Hjhb7yUYCS2SDEzyPqZQijaQaQF9p5N4sSEegPhkpump</span>
-                <button id="copy-btn">Copy</button>
             </div>
+            <button id="copy-btn" class="copy-btn">Copy</button>
         </div>
 
         <div class="buttons">
