--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
                 <source src="meme3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>      
+              <video controls>
+                <source src="meme4.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>  
+              <video controls>
+                <source src="meme5.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>  
+              <video controls>
+                <source src="meme6.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>  
         </div>
     </div>
 
