--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
 
         <div class="buttons">
-            <a href="https://t.me/BOOBS8008" class="btn" target="_blank">Telegram</a>
+            <a href="https://t.me/CTO80085BOOBS" class="btn" target="_blank">Telegram</a>
             <a href="https://dexscreener.com/solana/GCzD3y9mHTxaELAMQgCZCCCEcnFLA4R3RQW2fNin3D25" class="btn" target="_blank">Dexscreener</a>
             <a href="https://pump.fun/coin/Hjhb7yUYCS2SDEzyPqZQijaQaQF9p5N4sSEegPhkpump?coin_sort=market_cap&origin=search_bar" class="btn" target="_blank">Pump.fun</a>
         </div>
