--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 
         <div class="buttons">
             <a href="https://t.me/CTO80085BOOBS" class="btn" target="_blank">Telegram</a>
+            <a href="<a href="https://x.com/8_0_0_8_5boobs?s=21" class="btn" target="_blank">Twitter</a>
             <a href="https://dexscreener.com/solana/GCzD3y9mHTxaELAMQgCZCCCEcnFLA4R3RQW2fNin3D25" class="btn" target="_blank">Dexscreener</a>
             <a href="https://pump.fun/coin/Hjhb7yUYCS2SDEzyPqZQijaQaQF9p5N4sSEegPhkpump?coin_sort=market_cap&origin=search_bar" class="btn" target="_blank">Pump.fun</a>
         </div>
